# MonolithMaestro

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  JUCE_EXPLAINED.md  README.md
Source/: PitchDetector.cpp  PitchDetector.h  PitchDetectorIntegrationExample.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
